se agregó el modal de login a las paginas faltantes

--- a/pages/heladeras.html
+++ b/pages/heladeras.html
@@ -103,9 +103,14 @@
                 >
                 <ul class="dropdown-menu" aria-labelledby="menudropdown">
                   <li>
-                    <a class="dropdown-item" href="../pages/login.html"
-                      ><i class="bi bi-caret-right"></i> Login</a
+                    <a
+                      class="dropdown-item"
+                      href="#"
+                      data-bs-toggle="modal"
+                      data-bs-target="#miModal"
                     >
+                      <i class="bi bi-caret-right"></i> Login
+                    </a>
                   </li>
                   <li>
                     <a class="dropdown-item" href="../pages/registro.html"
@@ -352,6 +357,112 @@
               </li>
             </ul>
           </nav>
+        </div>
+      </section>
+      <section>
+        <!-- Modal Login -->
+        <div
+          class="modal fade"
+          id="miModal"
+          tabindex="-1"
+          aria-labelledby="modalLoginLabel"
+          aria-hidden="true"
+        >
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <!-- Encabezado del modal -->
+              <div class="modal-header">
+                <h5 class="modal-title" id="modalLoginLabel">Iniciar sesión</h5>
+                <button
+                  type="button"
+                  class="btn-close"
+                  data-bs-dismiss="modal"
+                  aria-label="Cerrar"
+                ></button>
+              </div>
+
+              <!-- Cuerpo del modal -->
+              <div class="modal-body">
+                <div class="card shadow p-4 rounded-4">
+                  <form>
+                    <!-- Email -->
+                    <div class="mb-3">
+                      <label for="email" class="form-label"
+                        >Correo electrónico</label
+                      >
+                      <input
+                        type="email"
+                        class="form-control"
+                        id="email"
+                        name="email"
+                        placeholder="correo@mail.com"
+                        maxlength="50"
+                        pattern="^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}$"
+                        title="Ingresa un correo válido. Ej: ejemplo@mail.com"
+                        autocomplete="email"
+                        required
+                      />
+                    </div>
+
+                    <!-- Contraseña -->
+                    <div class="mb-3">
+                      <label for="password" class="form-label"
+                        >Contraseña</label
+                      >
+                      <input
+                        type="password"
+                        class="form-control"
+                        id="password"
+                        name="password"
+                        placeholder="Contraseña"
+                        minlength="8"
+                        maxlength="20"
+                        pattern="^(?=.*[A-Za-z])(?=.*\d)(?=.*[!@#$%^&*])[A-Za-z\d!@#$%^&*]{8,}$"
+                        title="Debe tener al menos 8 caracteres, una letra, un número y un símbolo"
+                        autocomplete="current-password"
+                        required
+                      />
+                    </div>
+
+                    <!-- Link de recuperación -->
+                    <div class="mb-3 text-end">
+                      <a
+                        href="./pages/error404.html"
+                        class="text-decoration-none"
+                      >
+                        ¿Olvidaste tu contraseña?
+                      </a>
+                    </div>
+
+                    <!-- Botón de inicio de sesión -->
+                    <div class="d-grid">
+                        <button type="submit" class="btn btn-facebook my-1">
+                        Iniciar sesión
+                      </button>
+                        <button type="submit" class="btn btn-facebook my-1">
+                        Iniciar sesión con Google <i class="bi bi-google"></i>
+                      </button>
+                        <button type="submit" class="btn btn-facebook my-1">
+                        Iniciar sesión con Facebook
+                        <i class="bi bi-facebook"></i>
+                      </button>
+                    </div>
+                  </form>
+                </div>
+              </div>
+
+              <!-- Pie del modal-->
+              <div class="modal-footer">
+                <button
+                  type="button"
+                  class="btn btn-secondary"
+                  data-bs-dismiss="modal"
+                >
+                  Cancelar
+                </button>
+              </div>
+            </div>
+          </div>
         </div>
       </section>
     </main>
