Agregado de eectos en crads de helaeras e celulares

--- a/index.html
+++ b/index.html
@@ -601,13 +601,13 @@
                       <button type="submit" class="btn btn-facebook my-1">
                         Iniciar sesión
                       </button>
-                      <button type="submit" class="btn btn-facebook my-1">
+                      <a class="btn btn-facebook my-1">
                         Iniciar sesión con Google <i class="bi bi-google"></i>
-                      </button>
-                      <button type="submit" class="btn btn-facebook my-1">
+                      </a>
+                      <a class="btn btn-facebook my-1">
                         Iniciar sesión con Facebook
                         <i class="bi bi-facebook"></i>
-                      </button>
+                      </a>
                     </div>
                   </form>
                 </div>
