--- a/pages/registro.html
+++ b/pages/registro.html
@@ -126,153 +126,175 @@
     </header>
     <main>
       <section>
-        <article class="container my-4">
-          <div class="row justify-content-center mt-5">
-            <div class="col-12 col-md-6">
-              <!-- TÍTULO A LA IZQUIERDA -->
-              <h2 class="mb-4 text-start logo">Crea tu cuenta</h2>
-              <form class="card p-3 shadow">
-                <div class="mb-3">
-                  <label for="Nombre" class="form-label">Nombre *</label>
-                  <input
-                    type="text"
-                    class="form-control bg-light"
-                    id="Nombre"
-                    placeholder="Nombre"
-                    pattern="^[A-Za-zÁÉÍÓÚáéíóúÑñ\s]{2,50}$"
-                    title="Debe contener solo letras y espacios (mínimo 2 caracteres)"
-                    required
-                  />
-                </div>
+        <section>
+          <article class="container my-4">
+            <div class="row justify-content-center mt-5">
+              <div class="col-12 col-md-6">
+                <!-- TÍTULO A LA IZQUIERDA -->
+                <h2 class="mb-4 text-start logo">Crea tu cuenta</h2>
+                <form class="card p-3 shadow">
+                  <div class="mb-3">
+                    <label for="Nombre" class="form-label">Nombre *</label>
+                    <input
+                      type="text"
+                      class="form-control bg-light"
+                      id="Nombre"
+                      placeholder="Nombre"
+                      pattern="^[A-Za-zÁÉÍÓÚáéíóúÑñ\s]{2,50}$"
+                      title="Debe contener solo letras y espacios (mínimo 2 caracteres)"
+                      required
+                      minlength="2"
+                      maxlength="50"
+                    />
+                  </div>
 
-                <div class="mb-3">
-                  <label for="Apellido" class="form-label">Apellido *</label>
-                  <input
-                    type="text"
-                    class="form-control"
-                    id="Apellido"
-                    placeholder="Apellido"
-                    pattern="^[A-Za-zÁÉÍÓÚáéíóúÑñ\s]{2,50}$"
-                    title="Debe contener solo letras y espacios (mínimo 2 caracteres)"
-                    required
-                  />
-                </div>
+                  <div class="mb-3">
+                    <label for="Apellido" class="form-label">Apellido *</label>
+                    <input
+                      type="text"
+                      class="form-control"
+                      id="Apellido"
+                      placeholder="Apellido"
+                      pattern="^[A-Za-zÁÉÍÓÚáéíóúÑñ\s]{2,50}$"
+                      title="Debe contener solo letras y espacios (mínimo 2 caracteres)"
+                      required
+                      minlength="2"
+                      maxlength="50"
+                    />
+                  </div>
 
-                <div class="mb-3">
-                  <label for="correo" class="form-label">Email *</label>
-                  <input
-                    type="email"
-                    class="form-control"
-                    id="correo"
-                    placeholder="juanperez@mail.com"
-                    pattern="^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}$"
-                    title="Debe ser un correo válido (juanperez@mail.com)"
-                    required
-                  />
-                </div>
+                  <div class="mb-3">
+                    <label for="correo" class="form-label">Email *</label>
+                    <input
+                      type="email"
+                      class="form-control"
+                      id="correo"
+                      placeholder="juanperez@mail.com"
+                      pattern="^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}$"
+                      title="Debe ser un correo válido (juanperez@mail.com)"
+                      required
+                      minlength="6"
+                      maxlength="80"
+                    />
+                  </div>
 
-                <div class="mb-3">
-                  <label for="NombreDeUsuario" class="form-label"
-                    >Nombre de usuario</label
-                  >
-                  <input
-                    type="text"
-                    class="form-control"
-                    id="NombreDeUsuario"
-                    placeholder="Ej: juan_perez"
-                    pattern="^[a-zA-Z0-9._]{4,16}$"
-                    title="Debe contener solo letras, números, guion bajo (_) y punto (.) (4-16 caracteres)"
-                    required
-                  />
-                </div>
+                  <div class="mb-3">
+                    <label for="NombreDeUsuario" class="form-label"
+                      >Nombre de usuario</label
+                    >
+                    <input
+                      type="text"
+                      class="form-control"
+                      id="NombreDeUsuario"
+                      placeholder="Ej: juan_perez"
+                      pattern="^[a-zA-Z0-9._]{4,16}$"
+                      title="Debe contener solo letras, números, guion bajo (_) y punto (.) (4-16 caracteres)"
+                      required
+                      minlength="4"
+                      maxlength="16"
+                    />
+                  </div>
 
-                <div class="mb-3">
-                  <label for="Numero" class="form-label">Teléfono</label>
-                  <input
-                    type="tel"
-                    class="form-control"
-                    id="Numero"
-                    placeholder="Ej: 1122334455"
-                    pattern="^\d{10,15}$"
-                    title="Debe contener entre 10 y 15 dígitos numéricos"
-                    required
-                  />
-                </div>
+                  <div class="mb-3">
+                    <label for="Numero" class="form-label">Teléfono</label>
+                    <input
+                      type="tel"
+                      class="form-control"
+                      id="Numero"
+                      placeholder="Ej: 1122334455"
+                      pattern="^\d{10,15}$"
+                      title="Debe contener entre 10 y 15 dígitos numéricos"
+                      required
+                      minlength="10"
+                      maxlength="15"
+                    />
+                  </div>
 
-                <div class="mb-3">
-                  <label for="domicilio" class="form-label">Domicilio *</label>
-                  <input
-                    type="text"
-                    class="form-control"
-                    id="domicilio"
-                    placeholder="Calle, Número, Ciudad"
-                    pattern="^[A-Za-zÁÉÍÓÚáéíóúÑñ0-9\s.,#-]{5,100}$"
-                    title="Dirección completa"
-                    required
-                  />
-                </div>
+                  <div class="mb-3">
+                    <label for="domicilio" class="form-label"
+                      >Domicilio *</label
+                    >
+                    <input
+                      type="text"
+                      class="form-control"
+                      id="domicilio"
+                      placeholder="Calle, Número, Ciudad"
+                      pattern="^[A-Za-zÁÉÍÓÚáéíóúÑñ0-9\s.,#-]{5,100}$"
+                      title="Dirección completa"
+                      required
+                      minlength="5"
+                      maxlength="100"
+                    />
+                  </div>
 
-                <div class="mb-3">
-                  <label for="codigoPostal" class="form-label"
-                    >Código Postal *</label
-                  >
-                  <input
-                    type="text"
-                    class="form-control"
-                    id="codigoPostal"
-                    placeholder="12345"
-                    pattern="^[A-Za-z0-9\s-]{4,10}$"
-                    title="Debe contener solo números o letras (mínimo 4 y máximo 10 caracteres)"
-                    required
-                  />
-                </div>
+                  <div class="mb-3">
+                    <label for="codigoPostal" class="form-label"
+                      >Código Postal *</label
+                    >
+                    <input
+                      type="text"
+                      class="form-control"
+                      id="codigoPostal"
+                      placeholder="12345"
+                      pattern="^[A-Za-z0-9\s-]{4,10}$"
+                      title="Debe contener solo números o letras (mínimo 4 y máximo 10 caracteres)"
+                      required
+                      minlength="4"
+                      maxlength="10"
+                    />
+                  </div>
 
-                <div class="mb-3">
-                  <label for="contraseña" class="form-label"
-                    >Contraseña *</label
-                  >
-                  <input
-                    type="password"
-                    class="form-control"
-                    id="contraseña"
-                    placeholder="Ingresa tu contraseña"
-                    pattern="^(?=.*[A-Za-z])(?=.*\d)(?=.*[!@#$%^&*])[A-Za-z\d!@#$%^&*]{8,20}$"
-                    title="Debe contener al menos 8 caracteres, una letra, un número y un símbolo especial"
-                    required
-                  />
-                </div>
+                  <div class="mb-3">
+                    <label for="contraseña" class="form-label"
+                      >Contraseña *</label
+                    >
+                    <input
+                      type="password"
+                      class="form-control"
+                      id="contraseña"
+                      placeholder="Ingresa tu contraseña"
+                      pattern="^(?=.*[A-Za-z])(?=.*\d)(?=.*[!@#$%^&*])[A-Za-z\d!@#$%^&*]{8,20}$"
+                      title="Debe contener al menos 8 caracteres, una letra, un número y un símbolo especial"
+                      required
+                      minlength="8"
+                      maxlength="20"
+                    />
+                  </div>
 
-                <div class="mb-3">
-                  <label for="repetirContraseña" class="form-label"
-                    >Repetir Contraseña *</label
-                  >
-                  <input
-                    type="password"
-                    class="form-control"
-                    id="repetirContraseña"
-                    placeholder="Repite tu contraseña"
-                    pattern="^(?=.*[A-Za-z])(?=.*\d)(?=.*[!@#$%^&*])[A-Za-z\d!@#$%^&*]{8,20}$"
-                    title="Debe contener al menos 8 caracteres, una letra, un número y un símbolo especial"
-                    required
-                  />
-                </div>
+                  <div class="mb-3">
+                    <label for="repetirContraseña" class="form-label"
+                      >Repetir Contraseña *</label
+                    >
+                    <input
+                      type="password"
+                      class="form-control"
+                      id="repetirContraseña"
+                      placeholder="Repite tu contraseña"
+                      pattern="^(?=.*[A-Za-z])(?=.*\d)(?=.*[!@#$%^&*])[A-Za-z\d!@#$%^&*]{8,20}$"
+                      title="Debe contener al menos 8 caracteres, una letra, un número y un símbolo especial"
+                      required
+                      minlength="8"
+                      maxlength="20"
+                    />
+                  </div>
 
-                <div id="ayudaCorreo" class="form-text text-secondary media">
-                  Los campos con (*) son obligatorios
-                </div>
+                  <div id="ayudaCorreo" class="form-text text-secondary media">
+                    Los campos con (*) son obligatorios
+                  </div>
 
-                <div class="mb-2 d-flex justify-content-end">
-                  <button
-                    type="submit"
-                    class="btn btn-primary btn-error my-1 botonerror"
-                  >
-                    Registrar
-                  </button>
-                </div>
-              </form>
+                  <div class="mb-2 d-flex justify-content-end">
+                    <button
+                      type="submit"
+                      class="btn btn-primary btn-error my-1 botonerror"
+                    >
+                      Registrar
+                    </button>
+                  </div>
+                </form>
+              </div>
             </div>
-          </div>
-        </article>
+          </article>
+        </section>
       </section>
 
       <section>
