--- a/pages/tv1.html
+++ b/pages/tv1.html
@@ -63,17 +63,17 @@
               </form>
               <li class="nav-item">
                 <a
-                  class="nav-link me-5"
+                  class="nav-link mx-3"
                   href="../index.html"
                   >Inicio</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link me-5" href="../pages/error404.html">Novedades</a>
+                <a class="nav-link mx-3" href="../pages/error404.html">Novedades</a>
               </li>
               <li class="nav-item dropdown">
                 <a
-                  class="nav-link me-4 dropdown-toggle"
+                  class="nav-link mx-3 dropdown-toggle"
                   href="#"
                   id="menudropdown"
                   role="button"
