arreglamos el tamaño de las fotos del carrito

--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -134,12 +134,12 @@
 
               <!-- PRODUCTO 1 -->
               <section
-                class="border rounded-3 d-flex justify-content-between border mb-3 p-3 bg-primary-subtle"
+                class="border rounded-3 d-flex flex-column justify-content-between border mb-3 p-3 bg-primary-subtle"
               >
                 <img
                   src="../img/productos/Samsung-Zflip5.jpg"
                   alt="Teléfono"
-                  style="width: 100px"
+                  class="imgnosotros"
                 />
                 <div class="flex-grow-1 mx-3">
                   <h5>Samsung Galaxy Z Flip 5 5G</h5>
@@ -158,12 +158,12 @@
 
               <!-- PRODUCTO 2 -->
               <section
-                class="border rounded-3 d-flex justify-content-between border mb-3 p-3 bg-primary-subtle"
+                class="border rounded-3 d-flex flex-column justify-content-between border mb-3 p-3 bg-primary-subtle"
               >
                 <img
                   src="../img/productos/heladera-hisense.jpg"
                   alt="Heladera"
-                  style="width: 100px"
+                  class="imgnosotros"
                 />
                 <div class="flex-grow-1 mx-3">
                   <h5>Heladera Hisense</h5>
@@ -175,19 +175,18 @@
                   <a
                     href="./error404.html"
                     class="btn btn-danger justify-content-center align-items-center"
-                    >Eliminar</a
+                    >Eliminar</a>
                 </div>
               </section>
 
               <!-- PRODUCTO 3 -->
               <section
-                class="border rounded-3 d-flex justify-content-between border mb-3 p-3 bg-primary-subtle"
+                class="border rounded-3 d-flex flex-column justify-content-between border mb-3 p-3 bg-primary-subtle"
               >
                 <img
                   src="../img/productos/tv-monitor.jpg"
                   alt="Televisor"
-                  class="img-fluid "
-                  style="max-width: 100px;"
+                  class="imgnosotros"
                 />
                 <div class="flex-grow-1 mx-3">
                   <h5>Smart Tv Noblex</h5>
@@ -199,7 +198,7 @@
                   <a
                     href="./error404.html"
                     class="btn btn-danger justify-content-center align-items-center"
-                    >Eliminar</a
+                    >Eliminar</a>
                 </div>
               </section>
 
